# confluence-cli

./: Cargo.toml  LICENSE  README.md
.claude/skills/confluence-cli-workflows/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs  profile.rs
src/api/: contracts.rs  http.rs  mod.rs
src/api/http/: attachments.rs  comments.rs  dto.rs  mod.rs  pages.rs  properties.rs
src/app/: mod.rs
src/application/: attachments.rs  comments.rs  mod.rs  models.rs  pages.rs  ports.rs  profiles.rs  properties.rs  runtime.rs
src/application/vfs/: mod.rs
src/cli/: args.rs  bootstrap.rs  dispatch.rs  input.rs  mod.rs  output.rs  prompt.rs  shell.rs
src/cli/dispatch/: attachment.rs  comment.rs  convert.rs  mod.rs  page.rs  property.rs
src/cli/shell/: builtins.rs  format.rs  forward.rs  mod.rs  pipeline.rs  state.rs
src/cli/shell/commands/: cat.rs  cp.rs  find.rs  grep.rs  mkdir.rs  mod.rs  mv.rs  rm.rs  rmdir.rs  seq.rs  sleep.rs  tail.rs  whoami.rs
src/cli/shell/parser/: lexer.rs  mod.rs  syntax.rs
src/config/: mod.rs
src/convert/: mod.rs
src/domain/: mod.rs
src/infrastructure/: content_io.rs  mod.rs  profile_manager.rs  runtime_loader.rs
src/infrastructure/runtime_loader/: load.rs  mod.rs  resolve.rs
src/infrastructure/vfs/: confluence.rs  mod.rs
src/render/: mod.rs
src/secret/: mod.rs
src/support/: mod.rs
tests/: http_contract.rs  profile_bootstrap.rs  shell.rs  vfs.rs
