[package]
name = "confluence-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "A Rust-first Confluence CLI focused on safe content workflows"

[[bin]]
name = "confluence"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
quick-xml = "0.38"
diffy = "0.4"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
keyring = { version = "3.6.3", features = ["windows-native", "apple-native", "sync-secret-service", "crypto-rust"] }
shlex = "1"

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"
